src/test/resources/testinput/parsable/symtab/invalid_coco/sor4.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl sor4 {
  inv:
    {(a | b)}.size == 1;
}
